--- a/egs2/librispeech/speechlm1/conf/slurm.conf
+++ b/egs2/librispeech/speechlm1/conf/slurm.conf
@@ -3,7 +3,7 @@
 # Default configuration
 command sbatch --export=PATH
 option name=* --job-name $0
-default time=15:00:00
+default time=48:00:00
 option time=* --time $0
 option mem=* --mem-per-cpu $0
 option mem=0
@@ -11,11 +11,14 @@ option num_threads=* --cpus-per-task $0
 option num_threads=1 --cpus-per-task 1
 option num_nodes=* --nodes $0
 default gpu=0
-option gpu=0 -p ghx4-interactive,ghx4  --gres=gpu:1  -c 16 --mem 120000M --account=bbjs-dtai-gh --exclude=gh[044,104]
-option gpu=1 -p ghx4-interactive,ghx4  --gres=gpu:1  -c 16 --mem 120000M --account=bbjs-dtai-gh
-option gpu=2 -p ghx4  --gres=gpu:2  -c 32 --mem 240000M --account=bbjs-dtai-gh
-option gpu=3 -p ghx4  --gres=gpu:3  -c 48 --mem 360000M --account=bbjs-dtai-gh
-option gpu=4 -p ghx4-interactive,ghx4  --gres=gpu:4  -c 64 --mem 480000M --account=bbjs-dtai-gh
+option gpu=0 -p RM-shared   # RM-shared is used for CPU jobs (i.e., no GPU)
+option gpu=* -p GPU-shared --gres=gpu:$0 -c $0  # GPU-shared is used for GPU jobs (i.e., gpu>0)
+# default gpu=0 -p RM-shared
+# option gpu=0 -p ghx4-interactive,ghx4  --gres=gpu:1  -c 16 --mem 120000M --account=bbjs-dtai-gh --exclude=gh[044,104]
+# option gpu=1 -p ghx4-interactive,ghx4  --gres=gpu:1  -c 16 --mem 120000M --account=bbjs-dtai-gh
+# option gpu=2 -p ghx4  --gres=gpu:2  -c 32 --mem 240000M --account=bbjs-dtai-gh
+# option gpu=3 -p ghx4  --gres=gpu:3  -c 48 --mem 360000M --account=bbjs-dtai-gh
+# option gpu=4 -p ghx4-interactive,ghx4  --gres=gpu:4  -c 64 --mem 480000M --account=bbjs-dtai-gh
 
 # Recommend allocating more CPU than, or equal to the number of GPU
 # note: the --max-jobs-run option is supported as a special case
