--- a/egs2/librispeech/speechlm1/conf/train_delay_asr_small.yaml
+++ b/egs2/librispeech/speechlm1/conf/train_delay_asr_small.yaml
@@ -22,7 +22,7 @@ loss_region: target
 
 # General Dataloader configuration
 batch_type: numel
-batch_bins: 30000
+batch_bins: 15000 # 30000 for baseline
 num_iters_per_epoch: 2000
 max_epoch: 50
 num_workers: 6
@@ -32,11 +32,11 @@ log_interval: 200
 # optimization
 optim: adamw
 grad_clip: 5
-accum_grad: 1
+accum_grad: 2
 use_amp: true
 num_att_plot: 0
 optim_conf:
-    lr: 0.001
+    lr: 0.001 #original 0.001
     betas:
         - 0.9
         - 0.95
